--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -1,7 +1,8 @@
 {
   "swagger": {
     "jsonPath": "{{ getv "/configuration/swagger/json/path" "/api-json" }}",
-    "uiPath": "{{ getv "/configuration/swagger/ui/path" "/api-docs" }}"
+    "uiPath": "{{ getv "/configuration/swagger/ui/path" "/api-docs" }}",
+    "portOverride": "{{ getv "/configuration/swagger/port" "80" }}"
   },
   "logger": {
     "level": "{{ getv "/configuration/logger/level" "error" }}"
