--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -2,7 +2,7 @@
   "swagger": {
     "jsonPath": "{{ getv "/configuration/swagger/json/path" "/api-json" }}",
     "uiPath": "{{ getv "/configuration/swagger/ui/path" "/api-docs" }}",
-    "portOverride": "{{ getv "/configuration/swagger/port" "80" }}"
+    "portOverride": "{{ getv "/configuration/swagger/port" "" }}"
   },
   "logger": {
     "level": "{{ getv "/configuration/logger/level" "error" }}"
