feat: crud methods (#1)
* feat: crud methods

* feat: add geojson geometry polygon

* chore: change data return of create method

* feat: add docker_run, add swagger configuration port

* fix: add newline at EOL

* fix: swagger reposnses schemas

* fix: eslint, yml, options

* feat: add search by taskId and by expiration date

* fix: new line at EOL of .github yml files

* fix: new line at EOL of .github yml files

* fix: remove date type from user id in swagger yml

* feat: multiple delete by task IDs, change swagger, less than in expiration date

* refactor: delete method to DAL, update swagger yml

* fix: new line at EOL

* fix: eslint

--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -1,7 +1,8 @@
 {
   "swagger": {
-    "jsonPath": "{{ getv "/configuration/swagger/jsonPath" "/api-json" }}",
-    "uiPath": "{{ getv "/configuration/swagger/uiPath" "/api-docs" }}"
+    "jsonPath": "{{ getv "/configuration/swagger/json/path" "/api-json" }}",
+    "uiPath": "{{ getv "/configuration/swagger/ui/path" "/api-docs" }}",
+    "portOverride": "{{ getv "/configuration/swagger/port" "" }}"
   },
   "logger": {
     "level": "{{ getv "/configuration/logger/level" "error" }}"
@@ -31,6 +32,6 @@
       }
    },
    "search":{
-      "defaultPageSize": {{getv "/configuration/search/defaultPageSize" "20"}}
+      "defaultPageSize": {{getv "/configuration/search/default/page/size" "20"}}
    }
 }
