--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -16,6 +16,12 @@
       "database": "{{ getv "/configuration/db/database" "export-request" }}",
       "synchronize": {{ getv "/configuration/db/synchronize" "true" }},
       "logging": {{ getv "/configuration/db/logging" "false" }},
+      "ssl": {
+         "rejectUnauthorized": {{ getv "/configuration/db/ssl/reject_unauthorized" "null" }},
+         "ca": {{ getv "/configuration/db/ssl/ca" "null" }},
+         "key": {{ getv "/configuration/db/ssl/key" "null" }},
+         "cert": {{ getv "/configuration/db/ssl/cert" "null" }}
+      },
       "entities": [
          "dist/src/entity/**/*.js"
       ],
