--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -14,7 +14,7 @@
       "username": "{{ getv "/configuration/db/username" "export_request_admin" }}",
       "password": "{{ getv "/configuration/db/password" "1234" }}",
       "database": "{{ getv "/configuration/db/database" "export-request" }}",
-      "synchronize": {{ getv "/configuration/db/synchronize" "true" }},
+      "synchronize": {{ getv "/configuration/db/synchronize" "false" }},
       "logging": {{ getv "/configuration/db/logging" "false" }},
       "entities": [
          "dist/src/entity/**/*.js"
