fix(migration): fixed typeorm migration config

--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -26,7 +26,8 @@
          "dist/src/entity/**/*.js"
       ],
       "migrations": [
-         "dist/src/migration/**/*.js"
+         "dist/src/migration/**/*.js",
+         "src/migration/**/*.ts"
       ],
       "subscribers": [
          "dist/src/subscriber/**/*.js"
