fix: fixed migration config

--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -25,10 +25,7 @@
       "entities": [
          "dist/src/entity/**/*.js"
       ],
-      "migrations": [
-         "dist/src/migration/**/*.js",
-         "src/migration/**/*.ts"
-      ],
+      "migrations": [],
       "subscribers": [
          "dist/src/subscriber/**/*.js"
       ],
