--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -16,8 +16,8 @@
       "database": "{{ getv "/configuration/db/database" "export-request" }}",
       "synchronize": {{ getv "/configuration/db/synchronize" "false" }},
       "logging": {{ getv "/configuration/db/logging" "false" }},
-      "ssl": {
-         "rejectUnauthorized": {{ getv "/configuration/db/ssl/reject/unauthorized" "false" }},
+      "enableSslAuth": {{ getv "/configuration/db/ssl/enable" "false" }},
+      "sslPaths": {
          "ca": {{ getv "/configuration/db/ssl/ca" "null" }},
          "key": {{ getv "/configuration/db/ssl/key" "null" }},
          "cert": {{ getv "/configuration/db/ssl/cert" "null" }}
