--- a/confd/production.tmpl
+++ b/confd/production.tmpl
@@ -18,9 +18,9 @@
       "logging": {{ getv "/configuration/db/logging" "false" }},
       "enableSslAuth": {{ getv "/configuration/db/ssl/enable" "false" }},
       "sslPaths": {
-         "ca": "{{ getv "/configuration/db/ssl/ca" "null" }}",
-         "key": "{{ getv "/configuration/db/ssl/key" "null" }}",
-         "cert": "{{ getv "/configuration/db/ssl/cert" "null" }}"
+         "ca": {{ if ne (getv "/configuration/db/ssl/ca" "") "" }}"{{ getv "/configuration/db/ssl/ca" }}"{{ else }}{{ "null" }}{{ end }},
+         "key": {{ if ne (getv "/configuration/db/ssl/key" "") "" }}"{{ getv "/configuration/db/ssl/key" }}"{{ else }}{{ "null" }}{{ end }},
+         "cert": {{ if ne (getv "/configuration/db/ssl/cert" "") "" }}"{{ getv "/configuration/db/ssl/cert" }}"{{ else }}{{ "null" }}{{ end }}
       },
       "entities": [
          "dist/src/entity/**/*.js"
